tests/class_type/class_type.exp
Error --------------------------------------------------------------------------------------------------- test2.js:10:10

Cannot call `check` with `new A()` bound to `inst` because `A` [1] is incompatible with `B` [2].

   test2.js:10:10
   10| check(B, new A);
                ^^^^^ [1]

References:
   test2.js:7:7
    7| class B extends A { }
             ^ [2]


Error --------------------------------------------------------------------------------------------------- test2.js:12:10

Cannot call `check` with `new A()` bound to `inst` because `A` [1] is incompatible with `C` [2].

   test2.js:12:10
   12| check(C, new A);
                ^^^^^ [1]

References:
   test2.js:8:7
    8| class C { }
             ^ [2]


Error --------------------------------------------------------------------------------------------------- test2.js:13:10

Cannot call `check` with `new B()` bound to `inst` because `B` [1] is incompatible with `C` [2].

   test2.js:13:10
   13| check(C, new B);
                ^^^^^ [1]

References:
   test2.js:8:7
    8| class C { }
             ^ [2]


Error --------------------------------------------------------------------------------------------------- test2.js:14:10

Cannot call `check` with `new C()` bound to `inst` because `C` [1] is incompatible with `B` [2].

   test2.js:14:10
   14| check(B, new C);
                ^^^^^ [1]

References:
   test2.js:7:7
    7| class B extends A { }
             ^ [2]



Found 4 errors
